umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_extended_mol_indigo_ketcher.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 422
bond_count: 344
sum_formula: C284H3AcAgAlAmArAsAtAuB2BaBeBiBkBrCaCdCeCfClCmCoCrCsCuDyErEsEuFFeFmFrGaGdGeHeHfHgHoIInIrKKrLaLiLrLuMdMgMnMoN11NaNbNdNeNiNoNpO9OsP4PaPbPdPmPoPrPtPuRaRbReRfRhRnRuS5SbScSeSiSmSnSrTaTbTcTeThTiTlTmUVW3XeYYbZnZr+2
